# veilfi

./: .gitignore  Makefile  README.md
backend/: .env.example  Cargo.toml
backend/src/: main.rs
backend/src/contracts/: mod.rs
backend/src/routes/: deposit.rs  health.rs  mod.rs  redeem.rs  vault.rs
contracts/: README.md  foundry.toml  package-lock.json  package.json
contracts/script/: Deploy.s.sol
contracts/src/: VeilVault.sol  WrappedConfidentialUSDC.sol
contracts/src/interfaces/: IAavePool.sol
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/app/: page.tsx
frontend/src/components/: AIAssistant.tsx  ConnectWallet.tsx  DepositForm.tsx  DisclosureForm.tsx  RedeemForm.tsx  VaultStats.tsx  Web3MailReceipt.tsx  Web3Provider.tsx
frontend/src/lib/: veilVaultAbi.ts  wagmi.ts
