[package]
name = "veilfi-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "veilfi-backend"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Ethereum / contract interaction
ethers = { version = "2", features = ["rustls", "ws", "abigen"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config & env
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"
